--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,8 +26,8 @@ logging:
     enabled: true
 
 aws:
-  accessKey: AKIAW6NSQG5LFGL2ST6Q
-  secretKey: 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
+  accessKey: A
+  secretKey: D
   s3:
     region: eu-west-2
     bucketName: bear-s3-bucket
